@@ -1,7 +1,7 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
-Date: 2010-07-07
-Version: 0.4-4
+Date: 2010-09-28
+Version: 0.4-6
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
         <marcos.prates@uconn.edu>
 Description: Functions to prepare files needed for running BUGS in
@@ -11,5 +11,5 @@ Suggests: coda (>= 0.13-5)
 Maintainer: Marcos Prates <marcos.prates@uconn.edu>
 License: GPL (>= 3.0)
 Repository: CRAN
-Date/Publication: 2010-07-24 20:43:12
-Packaged: 2010-07-20 01:40:15 UTC; mprates
+Date/Publication: 2010-09-29 08:01:00
+Packaged: 2010-09-28 21:47:08 UTC; mprates
